XP-fix-for-liveedit-textarea-image-overflow

--- a/modules/admin/admin-ui/src/main/resources/web/admin/live-edit/styles/less/partials/text-view.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/live-edit/styles/less/partials/text-view.less
@@ -1,5 +1,7 @@
 .@{_CLS_PREFIX}text-view {
 
+  overflow: auto;
+
   // tiny mce style enforcing
   ul, ol {
     margin: 0 0 12px 40px;
